--- a/airbnb_paris_analysis.ipynb
+++ b/airbnb_paris_analysis.ipynb
@@ -1,8 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9f8ec1df",
+   "metadata": {},
+   "source": [
+    "# Analyse des données Airbnb à Paris\n",
+    "\n",
+    "Ce projet explore les données des annonces Airbnb à Paris afin d’identifier les tendances de prix, les quartiers les plus représentés, et les types de logements les plus fréquents.\n",
+    "\n",
+    "**Objectifs :**\n",
+    "- Comprendre la distribution des prix\n",
+    "- Identifier les quartiers les plus chers et les plus actifs\n",
+    "- Comparer les types de logements (entiers, partagés, hôtels)\n",
+    "- Proposer des visualisations claires\n",
+    "\n",
+    "**Données utilisées :** [Inside Airbnb - Paris](http://insideairbnb.com/get-the-data.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41a17b6b",
+   "metadata": {},
+   "source": [
+    "#### Chargement des données"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "964c8944",
    "metadata": {},
    "outputs": [
@@ -265,13 +291,9 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Charger les données\n",
     "df = pd.read_csv(\"data/listings.csv.gz\", compression='gzip', low_memory=False)\n",
     "\n",
-    "# Dimensions du jeu de données\n",
     "print(\"Dimensions :\", df.shape)\n",
-    "\n",
-    "# Aperçu\n",
     "df.head()\n"
    ]
   },
@@ -322,6 +344,16 @@
    ],
    "source": [
     "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c96c8f9",
+   "metadata": {},
+   "source": [
+    "### Sélection des colonnes utiles\n",
+    "\n",
+    "Le dataset initial comporte 79 colonnes. On garde uniquement celles qui sont pertinentes pour notre analyse : prix, quartier, type de logement, nombre d’avis, disponibilité, etc.\n"
    ]
   },
   {
@@ -514,6 +546,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "32dcea4c",
+   "metadata": {},
+   "source": [
+    "### Nettoyage des données\n",
+    "\n",
+    "- Suppression du symbole `$` dans `price`\n",
+    "- Conversion en `float`\n",
+    "- Suppression des lignes sans prix ou sans reviews\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "ed25d3dc",
@@ -553,8 +597,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "42e736f6",
+   "metadata": {},
+   "source": [
+    "### Analyse des valeurs manquantes\n",
+    "\n",
+    "On vérifie les colonnes contenant des valeurs manquantes et on applique un nettoyage.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "6e3bae95",
    "metadata": {},
    "outputs": [
@@ -581,13 +635,13 @@
     }
    ],
    "source": [
-    "# Compter les valeurs manquantes par colonne\n",
+    "\n",
     "df.isna().sum()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "45d867c2",
    "metadata": {},
    "outputs": [
@@ -614,16 +668,14 @@
     }
    ],
    "source": [
-    "# Supprimer les lignes sans prix\n",
+    "\n",
     "df = df[df['price'].notna()]\n",
     "\n",
-    "# Supprimer les lignes sans reviews_per_month\n",
+    "\n",
     "df = df[df['reviews_per_month'].notna()]\n",
     "\n",
-    "# Réinitialiser l’index\n",
     "df = df.reset_index(drop=True)\n",
     "\n",
-    "# Vérification finale\n",
     "df.isna().sum()\n"
    ]
   },
@@ -635,7 +687,7 @@
     "Un logement sans prix n’est pas exploitable dans une analyse :\n",
     "on ne peut pas le comparer, ni le visualiser, ni l’intégrer dans un modèle.\n",
     "\n",
-    "👉 C’est obligatoire pour notre objectif, donc on supprime ces lignes sans price."
+    "C’est obligatoire pour notre objectif, donc on supprime ces lignes sans price."
    ]
   },
   {
@@ -643,19 +695,26 @@
    "id": "92ec1275",
    "metadata": {},
    "source": [
-    "Ces valeurs sont souvent manquantes parce que le logement n’a jamais eu de réservation\n",
-    "Donc :\n",
-    "\n",
     "Pas de review = pas d’activité\n",
-    "\n",
     "On ne peut pas évaluer sa performance\n",
     "\n",
-    "👉 Ces lignes ne nous apportent aucune valeur pour l’analyse, donc on les élimine aussi."
+    "Ces lignes ne nous apportent aucune valeur pour l’analyse, donc on les élimine aussi."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84508ae7",
+   "metadata": {},
+   "source": [
+    "### Analyse exploratoire\n",
+    "\n",
+    "Statistiques descriptives des prix et analyse de la répartition des types de logements et des quartiers\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "8f493eb8",
    "metadata": {},
    "outputs": [
@@ -802,15 +861,13 @@
     }
    ],
    "source": [
-    "# Statistiques générales\n",
-    "df.describe()\n",
     "\n",
-    "\n"
+    "df.describe()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "7737a729",
    "metadata": {},
    "outputs": [
@@ -831,7 +888,7 @@
     }
    ],
    "source": [
-    "# Types de logements\n",
+    "\n",
     "df['room_type'].value_counts()\n"
    ]
   },
@@ -849,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "9331b514",
    "metadata": {},
    "outputs": [
@@ -877,7 +934,6 @@
    ],
    "source": [
     "\n",
-    "# Quartiers les plus fréquents\n",
     "df['neighbourhood_cleansed'].value_counts().head(10)"
    ]
   },
@@ -888,12 +944,12 @@
    "source": [
     "Top 5 : Buttes-Montmartre, Popincourt, Vaugirard, Entrepôt, Passy\n",
     "\n",
-    "Ce sont des zones très actives sur Airbnb, donc parfaites pour comparer prix/disponibilité."
+    "Ce sont des zones très actives sur Airbnb, donc parfaites pour comparer prix/disponibilité"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "6868c014",
    "metadata": {},
    "outputs": [
@@ -912,10 +968,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Taille des graphiques\n",
     "plt.figure(figsize=(10,6))\n",
     "\n",
-    "# Distribution des prix (limite à 500€ pour éviter les outliers extrêmes)\n",
     "sns.histplot(df[df['price'] < 500]['price'], bins=50, kde=True)\n",
     "plt.title(\"Distribution des prix (logements < 500€)\")\n",
     "plt.xlabel(\"Prix (€)\")\n",
@@ -928,9 +982,9 @@
    "id": "a7bb2911",
    "metadata": {},
    "source": [
-    "La majorité des logements coûtent entre 60€ et 150€.\n",
+    "La majorité des logements coûtent entre 60€ et 150€\n",
     "\n",
-    "Forte asymétrie à droite (beaucoup de logements peu chers, quelques très chers)."
+    "Forte asymétrie à droite (beaucoup de logements peu chers, quelques très chers)"
    ]
   },
   {
